<resources>
    <string name="app_name">Entropy</string>
    <string name="changeImage">Change Image</string>
    <string name="hello_world">Hello world!</string>
    <string name="calc">Calculate Entropy!</string>
    <string name="irrev">Irreversible Process!</string>
    <string name="rev">Reversible Process!</string>
    <string name="def">2nd Law Of Thermodynamics!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_iqra">Reversible Process Example</string>
    <string name="mainButton">2nd law of thermodynamics</string>
    <string name="mainButton1">reversible</string>
    <string name="mainButton2">irreversible</string>
    <string name="mainButton3">entropy</string>
    <string name="example1">example</string>
    <string name="example_ir_1">example 1</string>
    <string name="difference">reversible vs irreversible</string>
    <string name="dr_example1">reversible</string>
    <string name="dir_example1">irreversible</string>
    <string name="homeText">menu</string>
    <string name="title_activity_def">Defination</string>
    <string name="title_activity_irrev">Irreversible</string>
    <string name="title_activity_calc">Calculation</string>
    <string name="title_activity_rev">Reversible Process Definition</string>
    <string name="title_activity_diff">Reversible VS Irreversible</string>
    <string name="title_activity_irrevm">Irreversible Process Definiton</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="menu">Menu</string>
    <string name="about">About</string>
    <string name="credits">Credits</string>
    <string name="title_activity_irrev2">Irreversible Process Example</string>
    <string name="title_activity_reva">Reversible </string>
    <string name="title_activity_credits">Credits</string>
</resources>
