<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/p4">


    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/mainButton"
        android:background="@android:color/transparent"
        android:layout_marginTop="50dp"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/mainButton1"
        android:layout_below="@+id/button"
        android:background="@android:color/transparent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/mainButton2"
        android:layout_below="@+id/button1"
        android:background="@android:color/transparent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"/>


    <Button
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/button3"
        android:text="@string/mainButton3"
        android:background="@drawable/e2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/difference"
        android:id="@+id/button4"
        android:layout_below="@+id/button2"
        android:background="@android:color/transparent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Menu"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textColorHighlight="#383a35"
        android:textSize="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="credits"
        android:id="@+id/credits"
        android:background="@android:color/transparent"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff" />

</RelativeLayout>
